--- a/catalog.html
+++ b/catalog.html
@@ -21,10 +21,9 @@
           <li><a href="#">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <img src="img/basket-icon.svg" width="15" height="15"
-          alt="Корзина">
-          <a class="cart" href="cart.html">Корзина</a>
-        </li>
+          <li>
+            <a class="cart" href="cart.html">Корзина</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -111,7 +110,7 @@
             <img src="img/sedona.jpg" width="360"
               height="576" alt="Sedona">
             <div class="example-item">
-              <p class="example-item-label"><a href="#">Sedona</a></p>
+              <a class="example-item-label" href="#">Sedona</a>
               <p class="example-item-description">Информационный сайт для
                 туристов</p>
               <p class="button example-item-price">9 900 руб.</p>
@@ -121,17 +120,17 @@
             <img src="img/pink.jpg" width="360"
               height="576" alt="Pink">
             <div class="example-item">
-              <p class="example-item-label"><a href="#">Pink App</a></p>
+              <a class="example-item-label" href="#">Pink App</a>
               <p class="example-item-description">Продуктовый лендинг
                 приложения для iOS и Android</p>
               <p class="button example-item-price">9 900 руб.</p>
             </div>
           </li>
           <li>
-            <img src="img/barbershop.jpg"width="360" height="576"
+            <img src="img/barbershop.jpg" width="360" height="576"
               alt="Barbershop">
             <div class="example-item">
-              <p class="example-item-label"><a href="#">Barbershop</a></p>
+              <a class="example-item-label" href="#">Barbershop</a>
               <p class="example-item-description">Сайт салона красоты. Для
                 мужчин, да.</p>
               <p class="button example-item-price">9 900 руб.</p>
@@ -140,7 +139,7 @@
           <li>
             <img src="img/mishka.jpg" width="360" height="576" alt="Mishka">
             <div class="example-item">
-              <p class="example-item-label"><a href="#">Mishka</a></p>
+              <a class="example-item-label" href="#">Mishka</a>
               <p class="example-item-description">Интернет-магазин
                 вязаных игрушек</p>
               <p class="button example-item-price">9 900 руб.</p>
@@ -149,7 +148,7 @@
           <li>
             <img src="img/aplus.jpg" width="360" height="576" alt="A-plus">
             <div class="example-item">
-              <p class="example-item-label"><a href="#">A Plus</a></p>
+              <a class="example-item-label" href="#">A Plus</a>
               <p class="example-item-description">Лендинг курсов повышения
                 квалификации</p>
               <p class="button example-item-price">9 900 руб.</p>
@@ -158,7 +157,7 @@
           <li>
             <img src="img/kvast.jpg" width="360" height="576" alt="Kvast">
             <div class="example-item">
-              <p class="example-item-label"><a href="#">Кваст</a></p>
+              <a class="example-item-label" href="#">Кваст</a>
               <p class="example-item-description">Промо-сайт производителя
                 крафтового кваса</p>
               <p class="button example-item-price">9 900 руб.</p>
