--- a/index.html
+++ b/index.html
@@ -32,35 +32,37 @@
       <div class="slider">
         <div class="slider-wrapper">
           <div class="slider-item">
-            <div class="slider-item-text">
-              <p class="slider-headline">Долго, дорого, скурпулезно.</p>
-              <p class="slider-description">Математически выверенный
-                дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <div class="slider-item-description">
+              <h3>Долго, дорого,<br> скурпулезно.</h3>
+              <p>Математически выверенный дизайн<br> для вашего сайта или
+                мобильного приложения.</p>
               <a class="button" href="catalog.html">Узнать больше</a>
             </div>
           </div>
-          <div class="visually-hidden">
           <div class="slider-item">
-            <p class="slider-headline">Любим математику как никто другой.</p>
-            <p class="slider-description">Никакого креатива, только
-              математические формулы для расчета идеальных пропорций.</p>
-            <a class="button" href="catalog.html">Узнать больше</a>
+            <div class="slider-item-description">
+              <h3>Любим математику<br> как никто другой.</h3>
+              <p>Никакого креатива, только математические формулы<br> для расчета
+                идеальных пропорций.</p>
+              <a class="button" href="catalog.html">Узнать больше</a>
+            </div>
           </div>
           <div class="slider-item">
-            <p class="slider-headline">Только ночь, только хардкор</p>
-            <p class="slider-description">Работать днем, как все? Мы против
-              этого. Ближе к полуночи работа только начинается.</p>
-            <a class="button" href="catalog.html">Узнать больше</a>
+            <div class="slider-item-description">
+              <h3>Только ночь,<br> только хардкор</h3>
+              <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи
+                работа только начинается.</p>
+              <a class="button" href="catalog.html">Узнать больше</a>
+            </div>
           </div>
         </div>
-      </div>
       </div>
       <section>
         <h2 class="visually-hidden">Наши услуги</h2>
         <ul class="advantages">
           <li class="advantages-item">
             <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="advantages-item">
@@ -70,7 +72,7 @@
           </li>
           <li class="advantages-item">
             <h3>Презентации</h3>
-            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+            <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
             <a class="button" href="#">Заказать</a>
           </li>
         </ul>
