--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           </div>
           <div class="slider-item">
             <div class="slider-item-description">
-              <h3>Любим математику<br> как никто другой.</h3>
-              <p>Никакого креатива, только математические формулы<br> для расчета
+              <h3>Любим математику как никто другой.</h3>
+              <p>Никакого креатива, только математические формулы для расчета
                 идеальных пропорций.</p>
               <a class="button" href="catalog.html">Узнать больше</a>
             </div>
@@ -62,7 +62,7 @@
         <ul class="advantages">
           <li class="advantages-item">
             <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="advantages-item">
@@ -72,7 +72,7 @@
           </li>
           <li class="advantages-item">
             <h3>Презентации</h3>
-            <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <a class="button" href="#">Заказать</a>
           </li>
         </ul>
