--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <section>
+      <section class="section-advantages">
         <h2 class="visually-hidden">Наши услуги</h2>
         <ul class="advantages">
           <li class="advantages-item">
@@ -77,38 +77,43 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2 class="visually-hidden">Краткое описание</h2>
-        <h3 class="description-heading">Мы - маленькая, но гордая дизайн-студия
-          из Краснодара.</h3>
-        <p class="description">Исповедуем принципы минимализма и чистоты.
-          Ставим математеческийрасчет превыше креатива. Работаем не покладая
-           рук, как роботы.</p>
-        <p class="description-service">Выполняем заказы на разработку</p>
-        <ul class="description-service-item">
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
-        </ul>
-      </section>
-      <section>
-        <h2 class="visually-hidden">Статистика</h2>
-        <div class="statistic">
-          <p>С 2004 года любим точность во всём:</p>
-          <table>
-            <tr class="statistic-percent">
-              <td>146<sup>%</sup></td>
-              <td>100<sup>%</sup></td>
-              <td>50<sup>%</sup></td>
-            </tr>
-            <tr class="statistic-description">
-              <td>Уровень самоотдачи</td>
-              <td>Соблюдение сроков</td>
-              <td>Минимальная предоплата</td>
-            </tr>
-          </table>
-        </div>
-      </section>
+      <div class="main-information">
+        <section class="short-description">
+          <h2 class="visually-hidden">Краткое описание</h2>
+          <h3>Мы - маленькая, но гордая дизайн-студия
+            из Краснодара.</h3>
+          <p class="description">Исповедуем принципы минимализма и чистоты.
+            Ставим математеческий расчет превыше креатива. Работаем не покладая
+             рук, как роботы.</p>
+          <ul class="description-service">
+            <li>
+              <h3 class="description-service-heading">Выполняем заказы на разработку:</h3>
+            </li>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </section>
+        <section class="statistic">
+          <h2 class="visually-hidden">Статистика</h2>
+          <div class="statistic-item">
+            <p>С 2004 года любим точность во всём:</p>
+            <table>
+              <tr class="statistic-percent">
+                <td>146<sup>%</sup></td>
+                <td>100<sup>%</sup></td>
+                <td>50<sup>%</sup></td>
+              </tr>
+              <tr class="statistic-description">
+                <td>Уровень самоотдачи</td>
+                <td>Соблюдение сроков</td>
+                <td>Минимальная предоплата</td>
+              </tr>
+            </table>
+          </div>
+        </section>
+      </div>
+
       <section>
         <h2 class="visually-hidden">Список партнеров</h2>
         <ul class="partners">
