--- a/index.html
+++ b/index.html
@@ -78,44 +78,45 @@
         </ul>
       </section>
       <div class="main-information">
-        <section class="short-description">
-          <h2>Мы - маленькая, но гордая дизайн-студия
-            из Краснодара.</h2>
-          <p class="description">Исповедуем принципы минимализма и чистоты.
-            Ставим математеческий расчет превыше креатива. Работаем не покладая
-             рук, как роботы.</p>
-          <h3 class="description-service-heading">Выполняем заказы на разработку:</h3>
-          <ul class="description-service">
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
-          </ul>
-        </section>
-        <section class="statistic">
-          <h2 class="visually-hidden">Статистика</h2>
-          <div class="statistic-item">
-            <p>С 2004 года любим точность во всём:</p>
-            <table>
-              <tr class="statistic-percent">
-                <td>146<sup>%</sup></td>
-                <td>100<sup>%</sup></td>
-                <td>50<sup>%</sup></td>
-              </tr>
-              <tr class="statistic-description">
-                <td>Уровень самоотдачи</td>
-                <td>Соблюдение сроков</td>
-                <td>Минимальная предоплата</td>
-              </tr>
-            </table>
-          </div>
-        </section>
+        <div class="main-information-wrapper">
+          <section class="short-description">
+            <h2>Мы - маленькая, но гордая дизайн-студия
+              из Краснодара.</h2>
+            <p class="description">Исповедуем принципы минимализма и чистоты.
+              Ставим математеческий расчет превыше креатива. Работаем не покладая
+               рук, как роботы.</p>
+            <h3 class="description-service-heading">Выполняем заказы на разработку:</h3>
+            <ul class="description-service">
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильных приложений для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </section>
+          <section class="statistic">
+            <h2 class="visually-hidden">Статистика</h2>
+            <div class="statistic-item">
+              <p>С 2004 года любим точность во всём:</p>
+              <table>
+                <tr class="statistic-percent">
+                  <td>146<sup>%</sup></td>
+                  <td>100<sup>%</sup></td>
+                  <td>50<sup>%</sup></td>
+                </tr>
+                <tr class="statistic-description">
+                  <td>Уровень самоотдачи</td>
+                  <td>Соблюдение сроков</td>
+                  <td>Минимальная предоплата</td>
+                </tr>
+              </table>
+            </div>
+          </section>
+        </div>
       </div>
-
-      <section>
+      <section class="section-partners">
         <h2 class="visually-hidden">Список партнеров</h2>
         <ul class="partners">
           <li>
-            <a class="html-ac" href="https://htmlacademy.ru/intensive/htmlcss"
+            <a class="html-academy" href="https://htmlacademy.ru/intensive/htmlcss"
             aria-label="Логотип HTML-Academy"></a>
           </li>
           <li>
