--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="adress-and-contacts">
         <h2 class="visually-hidden">Адрес и контакты</h2>
         <img src="img/map.png" alt="Карта" width="1440" height="416">
-        <img src="img/map-marker.png" alt="Указатель" width="231" height="190">
+        <img class="map-marker" src="img/map-marker.png" alt="Указатель" width="231" height="190">
         <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
       появится настоящая карта -->
       <div class="studio-contacts">
         <h3 class="studio-label">Nёrds design studio</h3>
         <p>
           191186, Санкт-Петербург,<br>
-          ул. Б. Конюшенная, д. 19/8<br>
-          тел. +7 (812) 275-75-75
+          ул. Б. Конюшенная, д. 19/8
         </p>
+        <p>тел. +7 (812) 275-75-75</p>
         <button class="button" type="button">Напишите нам</button>
       </div>
       </section>
@@ -165,7 +165,7 @@
             сетей.</p>
         </div>
     </footer>
-    <section class="pop-up">
+    <section class="pop-up visually-hidden">
       <h2>Напишите нам</h2>
       <form action="https://echo.htmlacademy.ru" method="post">
         <p>
