--- a/index.html
+++ b/index.html
@@ -9,133 +9,139 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-navigation">
-        <a class="logo" href="index.html">
-          <img src="img/nerds-logo.svg" width="160"
-            height="65" alt="Логотип">
-        </a>
-        <ul class="site-navigation">
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-        <ul class="user-navigation">
-          <li>
-            <a class="cart" href="cart.html">Корзина</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="main-navigation">
+          <a class="logo" href="index.html">
+            <img src="img/nerds-logo.svg" width="160"
+              height="65" alt="Логотип">
+          </a>
+          <ul class="site-navigation">
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+          <ul class="user-navigation">
+            <li>
+              <a class="cart" href="cart.html">Корзина</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-      <h1 class="visually-hidden">Студия "Нёрдс"</h1>
-      <div class="slider">
-        <div class="slider-wrapper">
-          <div class="slider-item">
-            <div class="slider-item-description">
-              <h3>Долго, дорого,<br> скурпулезно.</h3>
-              <p>Математически выверенный дизайн<br> для вашего сайта или
-                мобильного приложения.</p>
-              <a class="button" href="catalog.html">Узнать больше</a>
+        <h1 class="visually-hidden">Студия "Нёрдс"</h1>
+        <div class="slider">
+            <div class="slider-wrapper">
+              <div class="container">
+                <div class="slider-item">
+                  <div class="slider-item-description">
+                    <h3>Долго, дорого,<br> скурпулезно.</h3>
+                    <p>Математически выверенный дизайн<br> для вашего сайта или
+                      мобильного приложения.</p>
+                    <a class="button" href="catalog.html">Узнать больше</a>
+                  </div>
+              </div>
+              </div>
+              <div class="slider-item visually-hidden">
+                <div class="slider-item-description">
+                  <h3>Любим математику как никто другой.</h3>
+                  <p>Никакого креатива, только математические формулы для расчета
+                    идеальных пропорций.</p>
+                  <a class="button" href="catalog.html">Узнать больше</a>
+                </div>
+              </div>
+              <div class="slider-item visually-hidden">
+                <div class="slider-item-description">
+                  <h3>Только ночь,<br> только хардкор</h3>
+                  <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи
+                    работа только начинается.</p>
+                  <a class="button" href="catalog.html">Узнать больше</a>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="slider-item visually-hidden">
-            <div class="slider-item-description">
-              <h3>Любим математику как никто другой.</h3>
-              <p>Никакого креатива, только математические формулы для расчета
-                идеальных пропорций.</p>
-              <a class="button" href="catalog.html">Узнать больше</a>
-            </div>
-          </div>
-          <div class="slider-item visually-hidden">
-            <div class="slider-item-description">
-              <h3>Только ночь,<br> только хардкор</h3>
-              <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи
-                работа только начинается.</p>
-              <a class="button" href="catalog.html">Узнать больше</a>
-            </div>
+        </div>
+        <div class="container">
+        <section class="section-advantages">
+          <h2 class="visually-hidden">Наши услуги</h2>
+          <ul class="advantages">
+            <li class="advantages-item">
+              <h3>Веб-сайты</h3>
+              <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <a class="button" href="#">Заказать</a>
+            </li>
+            <li class="advantages-item">
+              <h3>Приложения</h3>
+              <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+              <a class="button" href="#">Заказать</a>
+            </li>
+            <li class="advantages-item">
+              <h3>Презентации</h3>
+              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+              <a class="button" href="#">Заказать</a>
+            </li>
+          </ul>
+        </section>
+        <div class="main-information container">
+          <div class="main-information-wrapper">
+            <section class="short-description">
+              <h2>Мы - маленькая, но гордая дизайн-студия
+                из Краснодара.</h2>
+              <p class="description">Исповедуем принципы минимализма и чистоты.
+                Ставим математеческий расчет превыше креатива. Работаем не покладая
+                 рук, как роботы.</p>
+              <h3 class="description-service-heading">Выполняем заказы на разработку:</h3>
+              <ul class="description-service">
+                <li>Веб-сайтов любой сложности</li>
+                <li>Мобильных приложений для iOS и Android</li>
+                <li>Слайдшоу и видео для корпоративных презентаций</li>
+              </ul>
+            </section>
+            <section class="statistic">
+              <h2 class="visually-hidden">Статистика</h2>
+              <div class="statistic-item">
+                <p>С 2004 года любим точность во всём:</p>
+                <table>
+                  <tr class="statistic-percent">
+                    <td style="width: 95px">146<sup>%</sup></td>
+                    <td style="width: 95px">100<sup>%</sup></td>
+                    <td style="width: 105px">50<sup>%</sup></td>
+                  </tr>
+                  <tr class="statistic-description">
+                    <td>Уровень самоотдачи</td>
+                    <td>Соблюдение сроков</td>
+                    <td>Минимальная предоплата</td>
+                  </tr>
+                </table>
+              </div>
+            </section>
           </div>
         </div>
+        <section class="section-partners">
+          <h2 class="visually-hidden">Список партнеров</h2>
+          <ul class="partners">
+            <li>
+              <a class="html-academy" href="https://htmlacademy.ru/intensive/htmlcss"
+              aria-label="Логотип HTML-Academy"></a>
+            </li>
+            <li>
+              <a class="barber" href="https://htmlacademy.ru/intensive/htmlcss"
+              aria-label="Логотип Барбершопа"></a>
+            </li>
+            <li>
+              <a class="pink" href="https://htmlacademy.ru/intensive/htmlcss"
+                aria-label="Логотип Pink"></a>
+            </li>
+            <li>
+              <a class="mishka" href="https://htmlacademy.ru/intensive/htmlcss"
+                aria-label="Логотип Mishka"></a>
+            </li>
+          </ul>
+        </section>
       </div>
-      <section class="section-advantages">
-        <h2 class="visually-hidden">Наши услуги</h2>
-        <ul class="advantages">
-          <li class="advantages-item">
-            <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <a class="button" href="#">Заказать</a>
-          </li>
-          <li class="advantages-item">
-            <h3>Приложения</h3>
-            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a class="button" href="#">Заказать</a>
-          </li>
-          <li class="advantages-item">
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a class="button" href="#">Заказать</a>
-          </li>
-        </ul>
-      </section>
-      <div class="main-information">
-        <div class="main-information-wrapper">
-          <section class="short-description">
-            <h2>Мы - маленькая, но гордая дизайн-студия
-              из Краснодара.</h2>
-            <p class="description">Исповедуем принципы минимализма и чистоты.
-              Ставим математеческий расчет превыше креатива. Работаем не покладая
-               рук, как роботы.</p>
-            <h3 class="description-service-heading">Выполняем заказы на разработку:</h3>
-            <ul class="description-service">
-              <li>Веб-сайтов любой сложности</li>
-              <li>Мобильных приложений для iOS и Android</li>
-              <li>Слайдшоу и видео для корпоративных презентаций</li>
-            </ul>
-          </section>
-          <section class="statistic">
-            <h2 class="visually-hidden">Статистика</h2>
-            <div class="statistic-item">
-              <p>С 2004 года любим точность во всём:</p>
-              <table>
-                <tr class="statistic-percent">
-                  <td style="width: 95px">146<sup>%</sup></td>
-                  <td style="width: 95px">100<sup>%</sup></td>
-                  <td style="width: 105px">50<sup>%</sup></td>
-                </tr>
-                <tr class="statistic-description">
-                  <td>Уровень самоотдачи</td>
-                  <td>Соблюдение сроков</td>
-                  <td>Минимальная предоплата</td>
-                </tr>
-              </table>
-            </div>
-          </section>
-        </div>
-      </div>
-      <section class="section-partners">
-        <h2 class="visually-hidden">Список партнеров</h2>
-        <ul class="partners">
-          <li>
-            <a class="html-academy" href="https://htmlacademy.ru/intensive/htmlcss"
-            aria-label="Логотип HTML-Academy"></a>
-          </li>
-          <li>
-            <a class="barber" href="https://htmlacademy.ru/intensive/htmlcss"
-            aria-label="Логотип Барбершопа"></a>
-          </li>
-          <li>
-            <a class="pink" href="https://htmlacademy.ru/intensive/htmlcss"
-              aria-label="Логотип Pink"></a>
-          </li>
-          <li>
-            <a class="mishka" href="https://htmlacademy.ru/intensive/htmlcss"
-              aria-label="Логотип Mishka"></a>
-          </li>
-        </ul>
-      </section>
       <section class="adress-and-contacts">
         <h2 class="visually-hidden">Адрес и контакты</h2>
-        <img src="img/map.png" alt="Карта" width="1440" height="416">
+        <img src="img/map.png" alt="Карта" width="100%" height="416">
         <img class="map-marker" src="img/map-marker.png" alt="Указатель" width="231" height="190">
         <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
       появится настоящая карта -->
@@ -150,7 +156,7 @@
       </div>
       </section>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer container">
         <ul class="social-networks">
           <li><a class="logo-vk" href="https://vk.com" aria-label="Вконтакте">
           Вконтакте</a></li>
